# docs/swagger.yaml
@@ -62,6 +62,19 @@ definitions:
       name:
         type: string
     type: object
+  handler.EdLesson:
+    properties:
+      content:
+        items:
+          type: string
+        type: array
+      description:
+        type: string
+      name:
+        type: string
+      orderid:
+        type: integer
+    type: object
   handler.EdModule:
     properties:
       description:
@@ -85,7 +98,8 @@ definitions:
     type: object
 host: localhost:8080
 info:
-  contact: {}
+  contact:
+    email: eptanit@gmail.com
   description: EptaNit Super Site
   title: eptanit.com
   version: "2.71"
@@ -130,6 +144,42 @@ paths:
       summary: EditCourse
       tags:
       - course
+  /adm/lesson/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Edit lesson by ID
+      operationId: EditLesson
+      parameters:
+      - description: Lesson ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Edit Lesson (OrderId starts with one)
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/handler.EdLesson'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: error
+          schema:
+            type: string
+        default:
+          description: error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: EditLesson
+      tags:
+      - lesson
   /adm/module/{id}:
     put:
       consumes:
@@ -254,6 +304,45 @@ paths:
       summary: Searching Courses
       tags:
       - course
+  /lesson/{orderid}/{moduleid}:
+    get:
+      consumes:
+      - application/json
+      description: Get lesson by orderID
+      operationId: GetLesson
+      parameters:
+      - description: Lesson sequence number
+        in: path
+        name: orderid
+        required: true
+        type: integer
+      - description: Module ID
+        in: path
+        name: moduleid
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/core.ModLes'
+        "400":
+          description: error
+          schema:
+            type: string
+        "500":
+          description: error
+          schema:
+            type: string
+        default:
+          description: error
+          schema:
+            type: string
+      summary: GetLesson
+      tags:
+      - lesson
   /module/{id}:
     get:
       consumes:
